<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_navigation"
    app:startDestination="@id/na_fragment_map">

    <fragment
        android:id="@+id/na_fragment_eventos"
        android:name="mx.edu.ubicatec.ponymaps.ui.eventos.EventosFragment"
        android:label="@string/Menu2"
        tools:layout="@layout/fragment_eventos" >
        <action
            android:id="@+id/action_na_fragment_eventos_to_na_fragment_map"
            app:destination="@id/na_fragment_map" />
    </fragment>

    <fragment
        android:id="@+id/na_fragment_map"
        android:name="mx.edu.ubicatec.ponymaps.ui.mapa.MapaFragment"
        android:label="@string/Menu3"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/na_fragment_ubicaciones"
        android:name="mx.edu.ubicatec.ponymaps.ui.ubicaciones.UbicacionesFragment"
        android:label="@string/Menu4"
        tools:layout="@layout/fragment_ubicaciones" >
        <action
            android:id="@+id/action_na_fragment_ubicaciones_to_na_fragment_map"
            app:destination="@id/na_fragment_map" />
    </fragment>

    <fragment
        android:id="@+id/na_fragment_horarios"
        android:name="mx.edu.ubicatec.ponymaps.ui.horarios.HorariosFragment"
        android:label="@string/Menu5"
        tools:layout="@layout/fragment_horarios" >
        <action
            android:id="@+id/action_na_fragment_horarios_to_na_fragment_map"
            app:destination="@id/na_fragment_map" />
    </fragment>

</navigation>